--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -291,14 +291,14 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/beranda.JPG"
+                    src="images/ekstra/taekwondo1.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Taekwondo 1"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/guru.png"
+                    src="images/ekstra/taekwondo2.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Taekwondo 2"
                   />
