--- a/perpustakaan.html
+++ b/perpustakaan.html
@@ -19,7 +19,30 @@
     <link href="css/style.css" rel="stylesheet" />
     <title>
       SDN 06 NGRINGO | Perpustakaan
-    </title>    
+    </title>   
+    <style>
+      .header {
+        text-align: center;
+        padding: 20px 0;
+        font-family: 'Times New Roman', Times, serif;
+        border-bottom: 2px solid black;
+    }
+    .section {
+        padding: 20px 0;
+    }
+    .section img {
+        max-width: 100%;
+        height: 150px;
+    }
+    .section p {
+        font-family: 'Times New Roman', Times, serif;
+    }
+    .section-title {
+        font-weight: bold;
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+    }
+    </style>
   </head>
 
   <body>
@@ -108,28 +131,54 @@
       </div>
     </div>
   </nav>
-    <!-- End Header/Navigation-->
-    <!-- Start Why Choose Us Section -->
-    <div class="why-choose-section">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-6">
-            <h2 class="section-title">Halaman Sedang Dalam Proses Pengembangan</h2>
-            <p>
-              Kami sedang melakukan pembaruan konten pada halaman ini untuk memberikan informasi yang lebih baik kepada Anda. Terima kasih atas kesabaran Anda.
-            </p>
-          </div>
-
-          <div class="col-lg-5">
-            <div class="animation-placeholder">
-              <!-- Add your animation or visual effects here -->
-              <div class="animation-box"></div>
-            </div>
-          </div>
-        </div>
+    
+    <div class="container">
+      <div class="header">
+          <h1>Perpustakaan</h1>
+          <h2><strong>Selamat Datang di Halaman Perpustkaan SDN 06 Ngringo</strong></h2>
       </div>
-    </div>
-    <!-- End Why Choose Us Section -->
+  
+      <div class="section row">
+          <div class="col-md-4">
+              <img src="images/perpus1.jpg" alt="Gambar Buku">
+          </div>
+          <div class="col-md-8">
+              <p class="section-title">Mendorong Minat Baca Sejak Dini</p>
+              <p>Perpustakaan SDN 06 Ngringo bertekad untuk mendorong minat baca siswa sejak dini. Kami menyediakan koleksi buku yang beragam dan menarik, dari cerita anak-anak hingga buku-buku non-fiksi yang relevan. Dengan suasana yang ramah dan nyaman, kami ingin menciptakan pengalaman membaca yang menyenangkan bagi setiap pengunjung.
+              </p>
+          </div>
+      </div>
+  
+      <div class="section row">
+          <div class="col-md-8">
+              <p class="section-title">Akses Terhadap Berbagai Bahan Bacaan</p>
+              <p>Kami menawarkan akses mudah ke berbagai jenis bahan bacaan yang sesuai dengan kurikulum sekolah dan minat siswa. Dari buku teks hingga majalah, dari novel fiksi hingga referensi akademis, setiap siswa dapat menemukan sumber daya yang dibutuhkan untuk mendukung pembelajaran mereka di kelas dan di luar kelas.</p>
+          </div>
+          <div class="col-md-4">
+              <img src="images/perpus2.jpg" alt="Gambar Penulis">
+          </div>
+      </div>
+  
+      <div class="section row">
+          <div class="col-md-4">
+              <img src="images/perpus3.jpg" alt="Gambar Event">
+          </div>
+          <div class="col-md-8">
+              <p class="section-title">Literasi Informasi dan Keterampilan Belajar Mandiri</p>
+              <p>Perpustakaan kami juga berperan dalam mengembangkan literasi informasi dan keterampilan belajar mandiri siswa. Kami membantu siswa memahami bagaimana mencari, mengevaluasi, dan menggunakan informasi secara efektif.</p>
+          </div>
+      </div>
+  
+      <div class="section row">
+          <div class="col-md-8">
+              <p class="section-title">Dukungan dalam Pencarian Informasi untuk Tugas Sekolah</p>
+              <p>Kami siap membantu siswa dalam mencari informasi untuk tugas dan proyek sekolah mereka. Dengan staf yang terlatih dan akses ke sumber daya yang terpercaya, kami memastikan bahwa setiap siswa mendapatkan dukungan yang mereka butuhkan untuk mencapai keberhasilan akademis.</p>
+          </div>
+          <div class="col-md-4">
+              <img src="images/perpus4.jpg" alt="Gambar Fasilitas">
+          </div>
+      </div>
+  </div>
 
     <!-- Start Footer Section -->
     <footer class="footer-section">
