--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <html lang="en">
     <head>
       <meta charset="utf-8" />
+      <link rel="shorcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"/>
+      <meta property="og:title" content="SDN 06 Ngringo">
+      <meta property="og:description" content="Ngringo, Karanganyar">
+      <meta property="og:image" content="{{ url_for('images', filename='logo.png') }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="author" content="Untree.co" />
       <link rel="shortcut icon" href="images/logo.png" />
@@ -68,7 +72,8 @@
               </ul>
             </li>
             <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
-            <li class="nav-item dropdown">
+            <li><a class="nav-link" href="pengumuman.html">Pengumuman</a></li>
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -76,15 +81,13 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                >Informasi</a
               >
-                Informasi
-              </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
-                <li><a class="dropdown-item" href="materi.html">Materi Sekolah<a></li>
                 
+                <li><a class="dropdown-item" href="materi.html">Materi Sekolah</a></li> 
               </ul>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -437,8 +440,8 @@
                   <ul class="list-unstyled">
                     <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
                     <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
-                    <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
-                    <li><a href="materi.html">Materi Sekolah</a></li>
+                    <li><a href="pengumuman.html">Pengumuman</a></li>
+                    <!-- <li><a href="materi.html">Materi Sekolah</a></li> -->
                   </ul>
                 </div>
       
