--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -67,7 +67,8 @@
               </ul>
             </li>
             <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
-            <li class="nav-item dropdown">
+            <li><a class="nav-link" href="pengumuman.html">Pengumuman</a></li>
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -78,10 +79,10 @@
                 >Informasi</a
               >
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item" href="pengumuman.html">Pengumuman Sekolah</a></li>
-                <li><a class="dropdown-item" href="materi.html">Materi Sekolah</a></li>
+                
+                <li><a class="dropdown-item" href="materi.html">Materi Sekolah</a></li> 
               </ul>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -487,8 +488,8 @@
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
                   <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
-                  <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
-                  <li><a href="materi.html">Materi Sekolah</a></li>
+                  <li><a href="pengumuman.html">Pengumuman</a></li>
+                  <!-- <li><a href="materi.html">Materi Sekolah</a></li> -->
                 </ul>
               </div>
     
