--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -120,7 +120,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/ekstra/drumband.JPG"
+                    src="images/ekstra/drumband.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Drumband 1"
                   />
